# ray_tracing_rust

./: .gitignore  Cargo.toml  README.md  TODO.txt  random-scene.yaml  scene.yaml
src/: aabb.rs  calc.rs  camera.rs  hitable.rs  main.rs  material.rs  math.rs  ray.rs  scene.rs  texture.rs
src/hitable/: bvh.rs  list.rs  sphere.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs
src/texture/: checker.rs  constant.rs
